--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic = "^1.8.2"
 environs = "^9.3.3"
 aiofiles = "^0.7.0"
 odmantic = {git = "https://github.com/art049/odmantic.git"}
+aiohttp-admin2 = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
