--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ environs = "^9.3.3"
 aiofiles = "^0.7.0"
 odmantic = {git = "https://github.com/art049/odmantic.git"}
 aiohttp-admin2 = "^0.0.5"
+Pillow = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
